--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,13 @@
-dj-database-url==0.4.1
-Django==1.11.1
-gunicorn==19.6.0
-psycopg2==2.6.2
-whitenoise==3.2
+beautifulsoup4==4.6.0
+bs4==0.0.1
+certifi==2017.11.5
+chardet==3.0.4
+dj-database-url==0.4.2
+Django==1.11.7
+idna==2.6
+nltk==3.2.5
+pytz==2017.3
+requests==2.18.4
+six==1.11.0
+urllib3==1.22
+virtualenv==15.1.0
