--- a/requirements.txt
+++ b/requirements.txt
@@ -4,11 +4,13 @@ certifi==2017.11.5
 chardet==3.0.4
 dj-database-url==0.4.2
 Django==1.11.7
+django-cache-url==2.0.0
 django-redis-cache==1.7.1
 gunicorn==19.7.1
 idna==2.6
 psycopg2==2.7.3.2
 pytz==2017.3
+redis==2.10.6
 requests==2.18.4
 six==1.11.0
 urllib3==1.22
