--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ chardet==3.0.4
 dj-database-url==0.4.2
 Django==1.11.7
 django-cache-url==2.0.0
+django-redis==4.8.0
 django-redis-cache==1.7.1
 gunicorn==19.7.1
 idna==2.6
